<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">hangout_id</string>
    <string name="parse_client_key">hangout_key</string>

    <string name="app_name">Hangout</string>

    <string name="post_event_label_name">Post an Event</string>
    <string name="action_settings">Settings</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="signout">Sign Out</string>

    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Welcome to Let\'s Hangout</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>

    <!-- Strings for menu items-->
    <string name="map_screen">View the Map</string>
    <string name="list_screen">Events List</string>
    <string name="create_screen">Post an Event</string>

    <!--Strings for post activity-->
    <string name="post">Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="prompt_post">Post Description...</string>
    <string name="post_subject">Event Subject</string>
    <string name="event_list">Event List</string>
    <string name="post_event">Post an Event</string>
    <string name="hangout_map">Events Map</string>


</resources>
