<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MapActivity">

    <item android:id="@+id/map_screen"
          android:title="@string/map_screen"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/list_screen"
        android:title="@string/list_screen"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/create_screen"
        android:title="@string/create_screen"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/signout"
        android:title="@string/signout"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>

